# sc2-data-manager

./: .dockerignore  .env.model  .gitignore  .pre-commit-config.yaml  .pylintrc  .uvicorn.json  README.md  cli  ingest-local.sh  install.sh  pyproject.toml  run-server.sh
.github/actions/env-setup-dev/: action.yml
.github/actions/env-setup-test/: action.yml
.github/workflows/: linters.yml  main.yml  system.yml  unit-tests.yml
config/models/: cpu.yml  database.yml  disk.yml  external_services.yml  logger.yml  memory.yml  token_issuer.yml  uvicorn.yml
docker/: Dockerfile  build.sh  compose-up.sh  docker-compose.yml  run.sh
scripts/: _helpers.py  backup_db.py  deploy_db.py  get-projectname-locations.sh
src/composition/: cli_entrypoint.py  resources.py
src/composition/config_builders/: _helpers.py  accounts.py  cpu.py  database.py  disk.py  external_services.py  logger.py  memory.py  token_hasher.py  token_issuer.py  uvicorn.py
src/composition/enums/: config_filenames.py
src/domain/enums/: user_type.py
src/infrastructure/: base_infrastructure.py
src/services/: authentication_manager.py  base_service.py  game_summary_manager.py  health_manager.py  user_manager.py
tests/: 00-run-all.sh
tests/linters/: 00-run-all.sh  _helpers.py  abstract_classes_have_an_abstract_method.py  classes_are_implemented.py  classes_are_imported.py  errs_dont_inherit_directly_from_exception.py  imports-flow-in-correct-direction.sh  methods_declare_return_type.py  methods_have_low_param_count.py  service_exceptions_are_imported_in_interfaces.py
tests/system/: 00-run-all.sh
tests/unit/: 00-run-all.sh  test_pytest.py
(+196 files in other folders)
